--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,20 @@
-# Compiled class file
-*.class
-
-# Log file
+*/target/*
+.idea/*
+*.iml
+atlassian-ide-plugin.xml
+*.orig
+/logs/*
+*/logs/*
+target/*
+rebel.xml
+*/bin/*
+*/build/*
+.settings/*
+.svn/*
+.project
+*/.settings/*
+*/.svn/*
+*/.project
+.classpath
 *.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+/target/
